2.0.5
	+ Avoid useless log messages on VPN log files recreation
	+ Bugfix: VPN client connections and disconnections are logged again
	+ Client bundle filename includes now the certificate name
	+ Changed download client bundle text to "Download"
	+ Set default order for dashboard widgets
2.0.4
	+ Bugfix: VPN servers are correctly disabled when their certificates are
	  expired or revoked
	+ Added /etc/default/openvpn to openvpn used files
2.0.3
	+ Bugfix: Zentyal-managed VPN servers are only started by upstart
	+ Bugfix: VPN servers cannot be managed without a valid CA certificate
	+ Bugfix: Configuration files are correctly removed when a server is
	  deleted
2.0.2
	+ Typo fix: A missing space in a command to validate certificates
2.0.1
	+ Bugfix: Handle spaces in server names
	+ Added exception error to precondition fail message
1.5.4
	+ Zentyal rebrand
	+ Added Mac OS X option to download bundle (same bundle as linux)
1.5.3
	+ Added bridged mode support in firewall helper
1.5.2
	+ Use a different persistent connection file for each daemon
	instead of sharing a common one
	+ Better messages for upload bundle errors
1.5.1
	+ Added support for OpenVPN servers to listen only on a PPPoE iface
	+ Bugfix: Escape some files to make download client bundle work
	  again if the server name has spaces
	+ Bugfix: Escape some files to allow spaces in server names
	+ Make initializeInterfaces() public
	+ Bugfix: ebox itself addresses are not accepted in VPN clients as
	  server addresses
1.5
	+ Make changes to work with /etc/init upstart
1.3.15
	+ Set a respawn limit when the client is internal
1.3.14
	+ Remove migration scripts
1.3.13
	+ Usability enhancements. Configure automatically network address and port
	  and also create a server certificate and advertise local networks.
	  (Closes #1628)
	+ Keep folder open
	+ VPN adddress cannot be the same of any exposed network and viceversa
1.3.12
	+ Add breadcrumbs
1.3.11
	+ Added report support
1.3.10